--- a/README.Rmd
+++ b/README.Rmd
@@ -15,6 +15,8 @@ knitr::opts_chunk$set(
 
 # fgeo.install
 
+[![Travis build status](https://travis-ci.org/forestgeo/fgeo.install.svg?branch=master)](https://travis-ci.org/forestgeo/fgeo.install)
+
 __fgeo.install__ helps you to install __fgeo__. It installs the missing dependencies from CRAN and __fgeo__ packages from source code.
 
 
