No longer depend on stringr.

--- a/README.Rmd
+++ b/README.Rmd
@@ -17,37 +17,31 @@ knitr::opts_chunk$set(
 
 [![Travis build status](https://travis-ci.org/forestgeo/fgeo.install.svg?branch=master)](https://travis-ci.org/forestgeo/fgeo.install)
 
-__fgeo.install__ helps you to install __fgeo__. It installs the missing dependencies from CRAN and __fgeo__ packages from source code.
+__fgeo.install__ helps you to install __fgeo__. It guides you to install the required dependencies from CRAN and then installs __fgeo__ packages from source code.
 
-
-
-<details> <summary><strong>Advice before you install</strong></summary> <p>
+## Preparation
 
 * Ensure you have a recent version of R.
-
 * Ensure you have updated packages (run `update.packages()`).
-
 * Close all other R sessions.
+* Start a clean R session (click _Session > Restart R_).
 
-* Restart R (go to _Session > Restart R_).
+## Installation
 
-</p></details>
-
-
-
-1. Install devtools.
+1. Install devtools
 
 ``` r
 install.packages("devtools")
 ```
 
-2. Install __fgeo.install__.
+2. Install __fgeo.install__
 
 ```R
 devtools::install_github("forestgeo/fgeo.install")
 ```
 
 3. Run `install_fgeo()`
+
 ```
 fgeo.install::install_fgeo()
 ```
