--- a/README.Rmd
+++ b/README.Rmd
@@ -17,32 +17,25 @@ knitr::opts_chunk$set(
 
 [![Travis build status](https://travis-ci.org/forestgeo/fgeo.install.svg?branch=master)](https://travis-ci.org/forestgeo/fgeo.install)
 
-__fgeo.install__ helps you to install __fgeo__. It guides you to install the required dependencies from CRAN and then installs __fgeo__ packages from source code.
-
-## Preparation
-
-* Ensure you have a recent version of R.
-* Ensure you have updated packages (run `update.packages()`).
-* Close all other R sessions.
-* Start a clean R session (click _Session > Restart R_).
+__fgeo.install__ helps you to install __fgeo__. Use it to avoid reaching GitHub's rate-limit if you lack an authenticated GitHub account (but see [`usethis::browse_github_pat()`](https://usethis.r-lib.org/reference/browse_github_pat.html)).
 
 ## Installation
 
-1. Install devtools
-
 ``` r
 install.packages("devtools")
-```
-
-2. Install __fgeo.install__
-
-```R
 devtools::install_github("forestgeo/fgeo.install")
 ```
 
-3. Run `install_fgeo()`
+## Preparation
+
+```{r, echo=FALSE, comment=""}
+fgeo.install:::note_expected_r_environment()
+```
+
+## Usage
 
 ```
+fgeo.install::install_dependencies()
 fgeo.install::install_fgeo()
 ```
 
