--- a/README.Rmd
+++ b/README.Rmd
@@ -39,3 +39,10 @@ fgeo.install::install_dependencies()
 fgeo.install::install_fgeo()
 ```
 
+After installing __fgeo__ you can use use all packages with `library(fgeo)`
+
+```{r}
+library(fgeo)
+```
+
+See [__fgeo__](https://forestgeo.github.io/fgeo/).
