Dissable auth_token.

--- a/README.Rmd
+++ b/README.Rmd
@@ -32,6 +32,9 @@ devtools::install_github("forestgeo/fgeo.install")
 ## Usage
 
 ```
+fgeo.install::install()
+
+# Or
 fgeo.install::install_dependencies()
 fgeo.install::install_fgeo()
 ```
