New install_from_*().

--- a/README.Rmd
+++ b/README.Rmd
@@ -32,9 +32,9 @@ devtools::install_github("forestgeo/fgeo.install")
 ## Usage
 
 ```
-fgeo.install::install()
+fgeo.install::install_from_github()
 
 # Or
-fgeo.install::install_dependencies()
+fgeo.install::install_needed_dependencies()
 fgeo.install::install_fgeo()
 ```
